--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -23,6 +23,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/index.js"></script>
+<script type="text/javascript" src="js/customerView.js"></script>
 </body>
 </html>
