--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -19,6 +19,23 @@
     <![endif]-->
 </head>
 <body>
+<div class="container">
+    <h1>Client #<span id="clientNumber">x</span></h1>
+    <div class="row">
+        <div class="map">
+            <!--Insert epic map here-->
+        </div>
+    </div>
+    <div class="row">
+        <div class="panel panel-default">
+            <div class="panel-heading">Panel heading</div>
+            <!-- Table -->
+            <table class="table">
+
+            </table>
+        </div>
+    </div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
