--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../css/index.css" rel="stylesheet">
+    <link href="css/customerView.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -20,23 +20,31 @@
 </head>
 <body>
 <div class="container">
-    <h1>Client #<span id="clientNumber">x</span></h1>
+    <h2>Customer #<span id="clientNumber">x</span></h2>
     <div class="row">
-        <div class="map">
-            <!--Insert epic map here-->
+        <div id="map" class="map">
+            <p>WOW SUCH MAP VERY ACCURATE</p>
+            <canvas id="map-canvas"></canvas>
         </div>
     </div>
     <div class="row">
         <div class="panel panel-default">
-            <div class="panel-heading">Panel heading</div>
-            <!-- Table -->
-            <table class="table">
-
-            </table>
+            <div class="panel-heading">Order #<span id="orderNumber">x</span> status</div>
+            <div class="panel-body">
+                <span>Listing and status of each delivery</span>
+            </div>
+            <div class="table-responsive">
+                <!-- Table -->
+                <table id="ordersTable" class="table table-hover">
+                    <tr>
+                        <th>Item</th>
+                        <th>Turns left before delivery</th>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
