--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -18,6 +18,8 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link href="../css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -56,11 +58,25 @@
             </div>
         </div>
     </div>
+
+    <div class="inputContainer" id="inputs">
+        <div class="panel panel-default">
+            <div class="panel-heading">Load context simulation</div>
+            <div class="panel-body">
+                <label class="btn btn-default btn-file">JSON file (customer.json)
+                    <input id="input_json" type="file" onchange="getJson(event)" class="hidden">
+                </label>
+                <br/>
+                <button onclick="startSimulation()" class="btn btn-primary" style="margin-top: 4px">Start</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
+<script src="../js/fileinput.min.js"></script>
 <script type="text/javascript" src="js/operatorView.js"></script>
 </body>
 </html>
