--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -19,7 +19,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link href="../css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="../css/common.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
