--- a/AmIDone_visualiser/index.html
+++ b/AmIDone_visualiser/index.html
@@ -65,7 +65,7 @@
                         <label>
                             <input id="opRadio" type="radio" name="personType" value="operator"> Sign in as operator<br>
                         </label>
-                        <button id="opSub" type="submit" class="btn btn-default pull-right" disabled>Submit</button>
+                        <button id="opSub" type="submit" class="btn btn-default pull-right">Submit</button>
                     </form>
                 </div>
             </div>
