--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -46,7 +46,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">Order #<span id="orderNumber">x</span> status</div>
             <div class="panel-body">
-                <span>Listing and status of each delivery</span>
+                <span>Listing and delivery status of each item</span>
             </div>
             <div class="table-responsive">
                 <!-- Table -->
