--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -46,7 +46,7 @@
             <div class="class='col-sm-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">Details</div>
-                    <div class="panel-body">Panel Content</div>
+                    <div class="panel-body" id="detailsContent"></div>
                 </div>
             </div>
         </div>
@@ -79,7 +79,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/fileinput.min.js"></script>
 <script type="text/javascript" src="js/operatorView.js"></script>
 </body>
 </html>
