--- a/AmIDone_visualiser/index.html
+++ b/AmIDone_visualiser/index.html
@@ -8,10 +8,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>AmIDone</title>
+    <link rel="icon" href="favicon.ico"/>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/index.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -19,31 +21,17 @@
     <![endif]-->
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">AmIDone</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
 <div class="container">
-    <div class="row vertical-offset-100">
+    <div class="row">
+        <div class="logo col-centered">
+            <img src="img/amIDone.png" class="img-responsive" alt="amIDone">
+        </div>
+    </div>
+    <div class="row vertical-offset-20">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please sign in</h3>
+                    <h1 class="panel-title">Please sign in</h1>
                 </div>
                 <div class="panel-body">
                     <form id="custForm" role="form" action="" method="get">
@@ -53,10 +41,11 @@
                         </label>
                         <div class="form-group input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input id="customerId" class="form-control" pattern="[0-9.]+" type="text" name='customerNumber'
+                            <input id="customerId" class="form-control" pattern="[0-9.]+" type="text"
+                                   name='customerNumber'
                                    placeholder="Enter your customer number" required/>
                             <span class="input-group-btn">
-                            <button id="custSub" type="submit" class="btn btn-default">Submit</button>
+                            <button id="custSub" type="submit" class="btn btn-warning">Submit</button>
                             </span>
                         </div>
                     </form>
@@ -65,7 +54,7 @@
                         <label>
                             <input id="opRadio" type="radio" name="personType" value="operator"> Sign in as operator<br>
                         </label>
-                        <button id="opSub" type="submit" class="btn btn-default pull-right" disabled>Submit</button>
+                        <button id="opSub" type="submit" class="btn btn-warning pull-right" disabled>Submit</button>
                     </form>
                 </div>
             </div>
