--- a/AmIDone_visualiser/index.html
+++ b/AmIDone_visualiser/index.html
@@ -61,6 +61,13 @@
         </div>
     </div>
 </div><!-- /.container -->
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">
+            <span class="glyphicon glyphicon-copyright-mark"></span><span> AmIDone 2017</span>
+        </p>
+    </div>
+</footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
