--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -19,6 +19,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <link href="css/operatorView.css" media="all" rel="stylesheet" type="text/css" />
     <link href="../css/common.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -33,7 +34,7 @@
                     <input id="input_json" type="file" onchange="getJson(event)" class="hidden">
                 </label>
                 <br/>
-                <button onclick="startSimulation()" class="btn btn-primary" style="margin-top: 4px">Start</button>
+                <button onclick="startSimulation()" class="btn btn-warning" style="margin-top: 4px">Start</button>
             </div>
         </div>
     </div>
