--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -28,7 +28,7 @@
                 <input id="input_json" type="file" onchange="getJson(event)" class="hidden">
             </label>
             <br/>
-            <button onclick="startSimulation()" class="btn btn-primary" style="margin-top: 4px">Start</button>
+            <button onclick="startSimulation()" class="btn btn-warning" style="margin-top: 4px">Start</button>
         </div>
     </div>
 </div>
