--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -67,10 +67,18 @@
                     </div>
                 </div>
                 <div id="order" class="tab-pane fade">
-                    LES ORDERS
+                    <div class="table-responsive">
+                        <table class="table table-hover" id="ordersTable">
+
+                        </table>
+                    </div>
                 </div>
                 <div id="warehouse" class="tab-pane fade">
-                    LES WAREHOUSES
+                    <div class="table-responsive">
+                        <table class="table table-hover" id="warehousesTable">
+
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
