--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -41,8 +41,8 @@
 
     <div id="mainContent" class="hidden">
         <div class="row" id="view">
-            <div class="class='col-sm-9">
-
+            <div class="class='col-sm-9" id="map">
+                <canvas id="map_canvas"></canvas>
             </div>
             <div class="class='col-sm-3">
                 <div class="panel panel-default">
