--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -89,5 +89,6 @@
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/operatorView.js"></script>
+<script type="text/javascript" src="../js/map.js"></script>
 </body>
 </html>
