--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -41,10 +41,10 @@
 
     <div id="mainContent" class="hidden">
         <div class="row" id="view">
-            <div class="class='col-sm-9" id="map">
-                <canvas id="map_canvas"></canvas>
+            <div id="map" class="col-md-9" style="text-align: center;">
+                <canvas id="map_canvas" class="canvasCss"></canvas>
             </div>
-            <div class="class='col-sm-3">
+            <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">Details</div>
                     <div class="panel-body" id="detailsContent"></div>
