--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>AmIDone Customer View</title>
+    <link rel="icon" href="../favicon.ico"/>
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -44,10 +45,7 @@
     </div>
     <div class="row">
         <div class="panel panel-default">
-            <div class="panel-heading">Order #<span id="orderNumber">x</span> status</div>
-            <div class="panel-body">
-                <span>Listing and delivery status of each item</span>
-            </div>
+            <div class="panel-heading"><span>Order #<span id="orderNumber">x</span> status</span></div>
             <div class="table-responsive">
                 <!-- Table -->
                 <table id="ordersTable" class="table table-hover">
