--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -85,6 +85,14 @@
     </div>
 </div>
 
+<div id="media_bank" style="display: none;">
+    <img src="../media/flying.png" id="img_flying"/>
+    <img src="../media/unloading.png" id="img_unloading"/>
+    <img src="../media/loading.png" id="img_loading"/>
+    <img src="../media/warehouse.png" id="img_warehouse"/>
+    <img src="../media/order.png" id="img_order"/>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
