--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -38,9 +38,19 @@
         <h2>Customer #<span id="clientNumber">x</span></h2>
     </div>
     <div class="row">
-        <div id="map" class="map">
-            <p>WOW SUCH MAP VERY ACCURATE</p>
-            <canvas id="map-canvas"></canvas>
+        <div class="col-md-6 col-centered">
+            <div>
+                <div class="progress progressDrone">
+                    <div class="progress-bar progress-bar-warning progress-bar-striped progressbarDrone active"
+                         role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:94%">
+                        94%
+                    </div>
+                    <div class="droneDiv">
+                        <img src="../media/flying.png" class="droneCursor" alt="drone">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
