--- a/AmIDone_visualiser/customerView/customerView.html
+++ b/AmIDone_visualiser/customerView/customerView.html
@@ -37,14 +37,14 @@
     <div class="row">
         <h2>Customer #<span id="clientNumber">x</span></h2>
     </div>
-    <div class="row">
+    <div class="row vertical-offset-50">
         <div class="col-md-6 col-centered">
             <div>
                 <div class="progress progressDrone">
                     <div class="progress-bar progress-bar-warning progress-bar-striped progressbarDrone active"
                          role="progressbar"
-                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:94%">
-                        94%
+                         aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0" id="progressBar">
+                        <span id="progressSpan">0%</span>
                     </div>
                     <div class="droneDiv">
                         <img src="../media/flying.png" class="droneCursor" alt="drone">
@@ -53,21 +53,32 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row vertical-offset-100">
         <div class="panel panel-default">
             <div class="panel-heading"><span>Order #<span id="orderNumber">x</span> status</span></div>
             <div class="table-responsive">
                 <!-- Table -->
-                <table id="ordersTable" class="table table-hover">
+                <table class="table table-hover">
+                    <thead>
                     <tr>
                         <th>Item</th>
                         <th>Turns left before delivery</th>
                     </tr>
+                    </thead>
+                    <tbody id="ordersTable">
+                    </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">
+            <span class="glyphicon glyphicon-copyright-mark"></span><span> AmIDone 2017</span>
+        </p>
+    </div>
+</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="../js/bootstrap.min.js"></script>
