changed customer.json to log.json

--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -31,7 +31,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">Load context simulation</div>
             <div class="panel-body">
-                <label class="btn btn-default btn-file">JSON file (customer.json)
+                <label class="btn btn-default btn-file">JSON file (log.json)
                     <input id="input_json" type="file" onchange="getJson(event)" class="hidden">
                 </label>
                 <br/>
