--- a/AmIDone_visualiser/operatorView/operatorView.html
+++ b/AmIDone_visualiser/operatorView/operatorView.html
@@ -27,7 +27,7 @@
 <div class="background">
 <div class="container theme-showcase" role="main">
 
-    <div class="inputContainer" id="inputs">
+    <div class="inputCont" id="inputs">
         <div class="panel panel-default">
             <div class="panel-heading">Load context simulation</div>
             <div class="panel-body">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
-                        <div class="panel-heading">Details</div>
+                        <div class="panel-heading" id="detailsTitle">Details</div>
                         <div class="panel-body" id="detailsContent">Select a table element under the map.</div>
                     </div>
                 </div>
